<resources>
    <string name="app_name">TestingCRUD</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lblname">Name</string>
    <string name="lblquantity">Quantity</string>
    <string name="lblprice">Price</string>
    <string name="lblsend">Register</string>
    <string name="lblback">Back</string>
    <string name="title_activity_register">Register</string>



</resources>
